--- a/src/style.css
+++ b/src/style.css
@@ -1146,3 +1146,89 @@ hr{
         top: 0;
     }
 }
+
+
+/*services*/
+
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
+}
+
+
+
+
+html{
+    scroll-behavior: smooth;
+}
+
+.services_text {
+    color: white;
+}
+
+.service_section{
+    position: relative;
+}
+
+.service_details_div{
+    color:white;
+    display: flex;
+}
+
+.services_div{
+    position: relative;
+}
+
+.service_details_div p{
+    padding-left: 20px;
+}
+
+.services_detail_txt p{
+    color: white;
+}
+
+.text_div_first p{
+    color: white;
+}
+
+
+.img_service_section img{
+    margin: 0 auto;
+    display: block;
+    border-radius: 15px;
+}
+
+.services_inner_div, .seo_opt{
+    position: relative;
+    overflow: hidden;
+}
+
+
+.service_sectionf,.services_div{
+    overflow: hidden;
+    width: 100%;
+    position: relative;
+}
+
+
+.onpage_ul li {
+    color: white;
+}
+
+
+.onpage_ul li::before{
+    content: "\f35a";
+    color: #ff1d1d;
+    font-size: 15px;
+    font-family: "FontAwesome";
+    margin-right: 15px;
+}
+
+
+
+.programming_info p, .second{
+    color: white;
+}
+/*services*/
