--- a/src/style.css
+++ b/src/style.css
@@ -1240,66 +1240,76 @@ html{
 
 
 /*team*/
-/*.main{*/
-/*    display: flex;*/
-/*    justify-content: center;*/
-/*    align-items: center;*/
-/*    background-color: #0c5db9;*/
-/*}*/
-/*.profile-card{*/
-/*    font-family: sans-serif;*/
-/*    width: 220px;*/
-/*    height: 220px;*/
-/*    background: #fff;*/
-/*    padding: 30px;*/
-/*    border-radius: 50%;*/
-/*    box-shadow: 0 0 22px #3336;*/
-/*    transition: .6s;*/
-/*    margin: 0 25px;*/
-/*}*/
-/*.profile-card:hover{*/
-/*    border-radius: 10px;*/
-/*    height: 260px;*/
-/*}*/
 
-/*.profile-card:hover .img{*/
-/*    transform: translateY(-60px);*/
-/*}*/
-/*.img img{*/
-/*    width: 100%;*/
-/*    border-radius: 50%;*/
-/*    box-shadow: 0 0 22px #3336;*/
-/*    transition: .6s;*/
-/*}*/
-/*.profile-card:hover img{*/
-/*    border-radius: 10px;*/
-/*}*/
-/*.caption{*/
-/*    text-align: center;*/
-/*    transform: translateY(-80px);*/
-/*    opacity: 0;*/
-/*    transition: .6s;*/
-/*}*/
-/*.profile-card:hover .caption{*/
-/*    opacity: 1;*/
-/*}*/
-/*.caption h3{*/
-/*    font-size: 21px;*/
-/*    font-family: sans-serif;*/
-/*}*/
-/*.caption p{*/
-/*    font-size: 15px;*/
-/*    color: #0c52a1;*/
-/*    font-family: sans-serif;*/
-/*    margin: 2px 0 9px 0;*/
-/*}*/
-/*.caption .social-links a{*/
-/*    color: #333;*/
-/*    margin-right: 15px;*/
-/*    font-size: 21px;*/
-/*    transition: .6s;*/
-/*}*/
-/*.social-links a:hover{*/
-/*    color: #0c52a1;*/
-/*}*/
+.main{
+    position: relative;
+}
+
+.profile-card{
+    width: 220px;
+    height: 220px;
+    background: #222249;
+    padding: 30px;
+    border-radius: 50%;
+    box-shadow: rgb(255 68 44 / 29%) 0px 0px 22px;
+    transition: .6s;
+    margin: 0 25px;
+}
+.profile-card .img{
+    position: relative;
+    width: 100%;
+    height: 100%;
+    transition: .6s;
+    z-index: 99;
+}
+
+
+.profile-card:hover{
+    border-radius: 10px;
+    height: 260px;
+}
+
+.profile-card:hover .img{
+    transform: translateY(-60px);
+}
+.img img{
+    width: 100%;
+    border-radius: 50%;
+    box-shadow: 0 0 22px #3336;
+    transition: .6s;
+}
+.profile-card:hover img{
+    border-radius: 10px;
+}
+.caption{
+    text-align: center;
+    transform: translateY(-80px);
+    opacity: 0;
+    transition: .6s;
+}
+.profile-card:hover .caption{
+    opacity: 1;
+}
+.caption h3{
+    font-size: 21px;
+    font-family: sans-serif;
+    color: white;
+}
+.caption p{
+    font-size: 15px;
+    color: #0c52a1;
+    font-family: sans-serif;
+    margin: 2px 0 9px 0;
+    color: #ff1d1d;
+}
+.caption .social-links a{
+    color: #333;
+    margin-right: 15px;
+    font-size: 21px;
+    transition: .6s;
+    color: #0c52a1;
+}
+.social-links a:hover{
+    color: #ff1d1d;
+}
 /*team*/
