--- a/src/style.css
+++ b/src/style.css
@@ -201,7 +201,6 @@ div{
     backface-visibility: hidden;
     position: absolute;
     animation: move;
-    animation-duration: 49;
     animation-timing-function: linear;
     animation-iteration-count: infinite;
 }
@@ -648,7 +647,7 @@ iframe{
 
 
 .map_div{
-    border-radius: 5px solid;
+    border-radius: 5px;
 }
 
 
