--- a/src/style.css
+++ b/src/style.css
@@ -24,6 +24,7 @@ html{
 }
 
 
+
 /* navbar  start */
 
 
@@ -1312,3 +1313,86 @@ html{
     color: #ff1d1d;
 }
 /*team*/
+
+/*price*/
+
+
+
+
+.group{
+    justify-content: space-between;
+}
+
+.grid-1-5 {
+    border: 2px solid #ff1d1d;
+    width: 265px;
+    border-radius: 0.375rem;
+    height: 350px;
+    padding: 1.25em;
+    position: relative;
+    text-align: center;
+    transition: all .6s;
+    color: white;
+    margin-top: 25px;
+}
+
+.grid-1-5:hover {
+    background-color: #ff1d1d;
+    transform: scale(1.025);
+    z-index: 2;
+}
+.grid-1-5:hover:before, .grid-1-5:hover:after {
+    content: "";
+    position: absolute;
+    background-color: #ff1d1d;
+    *zoom: 1;
+    background-size: 100%;
+    top: -2px;
+    bottom: -2px;
+    width: 2px;
+}
+.grid-1-5:hover:before {
+    left: -2px;
+}
+.grid-1-5:hover:after {
+    right: -2px;
+}
+.grid-1-5:hover .button {
+    background-color: #222249;
+    color: white;
+    *zoom: 1;
+    background-size: 100%;
+    border: 1px solid #222249;
+}
+
+
+.button {
+    background-color: transparent;
+    border: 1px solid #ff1d1d;
+    border-radius: 0.375rem;
+    color: #fff;
+    font-size: 1em;
+    font-weight: 700;
+    padding: 0.75em 1.5em;
+    position: absolute;
+    bottom: 1.25em;
+    left: 50%;
+    margin-left: -60px;
+    text-decoration: none;
+    width: 120px;
+}
+
+.uppercase{
+    font-size: 18px;
+    color: #ff1d1d;
+}
+
+.grid-1-5:hover .uppercase{
+    color: #222249;
+}
+
+sup, .small {
+    font-size: 0.6125em;
+}
+
+/*price*/
