--- a/src/style.css
+++ b/src/style.css
@@ -442,7 +442,8 @@ div{
 .home1{
     z-index: 999;
     transition: all .7s ease;
-
+    border-bottom: 1px solid #ff1d1d;
+    border-radius: 15px;
 }
 
 .home2{
@@ -1336,6 +1337,7 @@ html{
     margin-top: 25px;
 }
 
+
 .grid-1-5:hover {
     background-color: #ff1d1d;
     transform: scale(1.025);
@@ -1391,8 +1393,5 @@ html{
     color: #222249;
 }
 
-sup, .small {
-    font-size: 0.6125em;
-}
 
 /*price*/
